--- a/.env
+++ b/.env
@@ -1,8 +1,12 @@
 PORT=8000
 MONGO_URL=mongodb+srv://ecommerce:ecommerce123@mern.csyaare.mongodb.net/Portfolio
 
-DASHBOARD_URL=http://localhost:5173/
-PORTFOLIO_URL=http://localhost:5174/
+
+
+DASHBOARD_URL=http://localhost:5173
+PORTFOLIO_URL=http://localhost:5174
+
+
 
 CLOUDNARY_API_KEY=518156665815695
 CLOUDNARY_CLOUD_NAME=dcqvpbe3g
